tests/assets/group_valid/validation-gatekeeper/constraints/us-dev/required-annotations.yaml
###############################################################################
# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
###############################################################################
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: validate-cluster-group-annotation
  namespace: gator-local
spec:
  match:
    excludedNamespaces: ["gator-local"]
  parameters:
    annotations:
    - key: package-group
      allowedRegex: ^us-dev$
